cmake_minimum_required(VERSION 3.8)

project(TCPL)

set(CMAKE_CXX_STANDARD 11)

add_executable(2-1 ch02/2-1.c)

add_executable(2-3 ch02/2-3.c)

add_executable(2-4 ch02/2-4.c)

add_executable(2-6 ch02/2-6.c)

add_executable(2-9 ch02/2-9.c)

add_executable(2-10 ch02/2-10.c)

add_executable(3-2 ch03/3-2.c)

add_executable(3-3 ch03/3-3.c)